--- a/sato-calculadora.html
+++ b/sato-calculadora.html
@@ -29,6 +29,10 @@
         .btn.btn-dark{
             font-size: 28px;
         }
+        .btn.btn-danger{
+            font-size: 28px;
+            color:oldlace;
+        }
 
   </style>
   <body>
@@ -54,7 +58,7 @@
         <div onclick="cambiarValor(9)" type="button" class="btn btn-dark">9</div>
         <div onclick="agregarOperador('*')" type="button" class="btn btn-dark">*</div>
 
-        <div onclick="limpiarTodo()" type="button" class="btn btn-dark">AC</div>
+        <div onclick="limpiarTodo()" type="button" class="btn btn-danger">AC</div>
         <div onclick="cambiarValor(0)" type="button" class="btn btn-dark">0</div>
         <div onclick="calcular()" type="button" class="btn btn-dark">=</div>
         <div onclick="agregarOperador('/')" type="button" class="btn btn-dark">/</div>
